[project]
name = "arxivit"
version = "0.1.0"
description = "Pack and compress LaTeX paper for arXiv upload."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "humanize>=4.12.1",
    "pillow>=11.1.0",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
]

[project.scripts]
arxivit = "main:cli"

[tool.uv]
package = true
